--- a/css/style.css
+++ b/css/style.css
@@ -1,66 +1,252 @@
 /*레이아웃*/
-.container{width: 1280px; margin: 0 auto}
-.row{padding: 0 28px; }
+.container{
+  width: 1280px; 
+  margin: 0 auto;
+}
+.row{
+  padding: 0 28px; 
+}
 #header { 
-	position: fixed; width: 100%; height: 60px; 
+	position: fixed; 
+  width: 100%; 
+  height: 80px; 
 	background-color: rgba(255, 255, 255, 0.5); 
 	backdrop-filter: blur(15px);
 	-webkit-backdrop-filter: blur(15px);
-	z-index: 10;}
-main {width: 100%; }
-#best { background-color: #fff; text-align: center; margin: 100px 0; }
-#new{ margin: 100px 0; }
-#sale {position: relative; margin: 100px 0; }
-#event{margin: 100px 0;}
-#footer{background-color: #f5f5f5; }
-#top {position: fixed; bottom: 30px; right: 20px; border-radius: 50%; box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); z-index: 1000}
+	z-index: 10;
+}
+main {
+  width: 100%; 
+}
+#best { 
+  background-color: #fff; 
+  text-align: center; 
+  margin: 100px 0; 
+}
+#new{ 
+  margin: 100px 0; 
+}
+#sale {
+  position: relative; 
+  margin: 100px 0; 
+}
+#event{
+  margin: 100px 0;
+}
+#footer{
+  background-color: #f5f5f5; 
+}
+#top {
+  position: fixed; 
+  bottom: 30px; 
+  right: 20px; 
+  border-radius: 50%; 
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2); 
+  z-index: 1000;
+}
 
 
 /*top*/
-#top a{display: block;border-radius: 50%; padding: 10px; 
-	background-color: #fff; color: #222;}
+#top a{
+  display: block;
+  border-radius: 50%; 
+  padding: 10px; 
+	background-color: #fff; 
+  color: #222;
+}
 
 
 /*header*/
-.header{display: flex; justify-content: space-between; align-items: center; padding: 19px 10px 19px 10px; }
+.header{
+  display: flex; 
+  justify-content: space-between; 
+  align-items: center;
+  padding: 29px 10px 29px 10px; 
+}
 .header h4{ }
-.header .logo{position: absolute; top: 15px; left: 50%; transform: translateX(-50%);}
-.header .logo img{ width: 100px;}
+.header .logo{
+  position: absolute; 
+  top: 15px; 
+  left: 50%; 
+  transform: translateX(-50%);
+}
+.header .logo img{ 
+  width: 100px;
+}
 
 .ham_btn{ 
 	position: relative; 
 	cursor: pointer;
-	width: 65px; height: 20px; 
+	width: 65px; 
+  height: 20px; 
 	transition: 0.5s;
 }
 .ham_btn .ham{
 	position: relative;
-	width: 20px; height: 15px;
-	top: 50%; transform: translateY(-50%);
-	display: block;   }
+	width: 20px; 
+  height: 15px;
+	top: 50%; 
+  transform: translateY(-50%);
+	display: block;   
+}
 .ham span{
-	position: absolute; display: block; background-color: #222;  width: 20px; height: 2px; transition: 0.5s;}
-.ham span:nth-child(1){top: 0;}
-.ham span:nth-child(2){	top: 50%; }
+	position: absolute; 
+  display: block; 
+  background-color: #222;  
+  width: 20px; 
+  height: 2px; 
+  transition: 0.5s;
+}
+.ham span:nth-child(1){
+  top: 0;
+}
+.ham span:nth-child(2){	
+  top: 50%; 
+}
 .ham span:nth-child(3){
-	top: 100%; transform: translateY(-50%);}
+	top: 100%; 
+  transform: translateY(-50%);
+}
 .ham_btn > span{ 
-	position: absolute; top: 0px; right: 0; text-transform: uppercase;font-size: 12px; font-weight: 600; 
-	transition: 0.5s;}
+	position: absolute; 
+  top: 0px; 
+  right: 0; 
+  text-transform: uppercase;
+  font-size: 12px; 
+  font-weight: 600; 
+	transition: 0.5s;
+}
 /*active됐을 때*/
-.ham_btn.active{ width: 20px;}
-.ham_btn.active > span { opacity: 0;}
-.ham_btn.active .ham span:nth-child(1){transform: rotate(45deg);top: 50%}
-.ham_btn.active .ham span:nth-child(2){ opacity: 0}
-.ham_btn.active .ham span:nth-child(3){transform: rotate(-45deg);top:50%}
+.ham_btn.active{ 
+  width: 20px;
+}
+.ham_btn.active > span { 
+  opacity: 0;
+}
+.ham_btn.active .ham span:nth-child(1){
+  transform: rotate(45deg);top: 50%
+}
+.ham_btn.active .ham span:nth-child(2){ 
+  opacity: 0;
+}
+.ham_btn.active .ham span:nth-child(3){
+  transform: rotate(-45deg);
+  top:50%;
+}
 /*active하면 나오는 메뉴들*/
-#mNav{position: fixed; top: 60px; right: 0;
+#Nav{
+  position: fixed; 
+  top: 80px; 
+  right: 0;
 	background-color: rgba(255, 255, 255, 0.5); 
 	backdrop-filter: blur(15px);
 	-webkit-backdrop-filter: blur(15px);
-	width: 100%; height:atuo;; z-index: 100;
+	width: 100%; 
+  height:atuo; 
+  z-index: 100;
 	display: none;
 }
-#mNav .menu li a{
-	display: block;padding: 15px 0;text-align: center;}
-#mNav .menu li:hover {background-color: #fff;}
+#Nav .menu li a{
+	display: block;
+  padding: 15px 0;
+  text-align: center;
+}
+#Nav .menu li:hover {
+  background-color: #fff;
+}
+
+/*main*/
+main {
+  position: relative;
+}
+main video{
+	height: 100%;
+	width: 100%; 
+  padding-top: 60px;  
+}
+main .text{
+	position: absolute; 
+  top: 50%; 
+  right: 13%;
+	transform: translatey(-50%);
+	font-size: 2vw; 
+  text-align: right;
+	color: #fff;
+	text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+
+
+/*best*/
+.best {  
+  text-align: center; 	
+}
+.best h2{ 
+  font-weight: 600; 
+  font-size: 30px; 
+  text-transform: uppercase; 
+  margin-bottom: 80px; 
+  letter-spacing: 10px;  
+	opacity: 0; 
+  transform: translateY(-20px);
+  transition: 0.5s ease-in;
+}
+.best .item img{ 	
+  width: 100%; 
+  height: 100%;
+	border-radius: 50%;
+}
+.best figcaption{ 
+  margin-top: 30px;
+}
+.best .item span{ 
+  font-size: 15px;
+}
+.best .item strong { 
+  font-size: 20px; 
+  font-weight: 600;
+}
+.best .item strong span{ 
+  font: 15px; 
+  font-weight: normal;
+}
+.best .slider{ 
+  margin-bottom: 100px; 
+	opacity: 0; 
+  transform: translateY(-20px);
+  transition: 0.5s ease-in;
+}
+.best .banner{
+	display: flex; 
+  justify-content: space-around; 
+  align-items: center; 
+  opacity: 0; 
+  transform: translateY(-20px); 
+  transition: 0.5s ease-in;
+}
+.best .banner img{width: 100px;}
+.best .banner span{ 
+  display: inline-block; 
+  width: 60%; 
+  color: #777; 
+  font-weight: 500; 
+  font-size: 25px; 
+  padding: 5px 0; 
+  letter-spacing: 20px; 
+  border-top: 1px solid #777; 
+  border-bottom: 1px solid #777;
+}
+
+.best.show h2{ 
+  opacity: 1; 
+  transform: none; 
+}
+.best.show .slider{ 
+  opacity: 1; 
+  transform: none;  
+  transition-delay: 0.5s;
+}
+.best.show .banner{
+  opacity: 1; 
+  transform: none;  
+  transition-delay: 0.8s;
+}
